# erpnext-docker

./: .copilot-instructions.md  .env.example  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  UPGRADE.md  docker-compose.yml
BR/: Account.csv
apps/dm_erpnext_utilities/: README.md  install.sh  pyproject.toml
apps/dm_erpnext_utilities/dm_erpnext_utilities/: hooks.py
apps/dm_erpnext_utilities/dm_erpnext_utilities/commands/: __init__.py  account_importer.py  account_manager.py
doc/fin/: PLANO_DE_CONTAS_VS_CENTROS_DE_CUSTO.md
scripts/: README.md  delete_account.sh  delete_account_core.py  delete_account_recursive.py
scripts/template/: README.md  copy_templates_to_container.sh
templates/account/br/: README.md  br_minimo.json  br_pessoal.json  plano_de_contas_minimo_br.json  plano_de_contas_pessoal_br.json
templates/account/br/csv/: GUIA_PLANO_DE_CONTAS.md  plano_de_contas_nivel_1_root.csv  plano_de_contas_nivel_2.csv  plano_de_contas_nivel_2_retry.csv  plano_de_contas_nivel_3.csv  plano_de_contas_nivel_4_final.csv  plano_de_contas_pessoal_br_v16.csv
